@@ -212,6 +212,10 @@ Specify an alternate port for connections.
 IN BETA: Show history within console window.  This code is still being 
 worked upon, but may help some users.
 
+=item --tag-file,-c <file>
+
+Use supplied file as additional tag file (see also L</"FILES">)
+
 =item --term-args,-t ""
 
 Specify arguments to be passed to terminals being used
@@ -339,9 +343,9 @@ S<$ ccon -M master server1 server2>
 
 =over
 
-=item F</etc/clusters>
+=item F</etc/clusters>, F<$HOME/.clusterssh/clusters>
 
-This file contains a list of tags to server names mappings.  When any name
+These files contain a list of tags to server names mappings.  When any name
 is used on the command line it is checked to see if it is a tag.
 If it is a tag, then the tag is replaced with the list of servers.  The 
 formated is as follows:
@@ -354,15 +358,33 @@ S<< <tag> [user@]<server> [user@]<server> [...] >>
   live admin1@server1 admin2@server2 server3 server4 
 
 All comments (marked by a #) and blank lines are ignored.  Tags may be 
-nested, but be aware of recursive tags which are not checked for.
+nested, but be aware of using recursive tags as they are not checked for.
 
-Clusters may also be specified either directly (see C<clusters> configuration
-options) or indirectly (see C<extra_cluster_file> configuration option) 
-in the users F<$HOME/.clusterssh/config> file.
+Extra cluster files may also be specified either as an option on the 
+command line (see C<cluster-file>) or in the users F<$HOME/.clusterssh/config> 
+file (see C<extra_cluster_file> configuration option).
+
+NOTE: the last tag read overwrites any pre-existing tag of that name
 
 NOTE: there is a special cluster tag called C<default> - any tags or hosts
 included within this tag will be automatically opened if no other tags
 are specified on the command line.
+
+=item F</etc/tags>, F<$HOME/.clusterssh/tags>
+
+Very similar to F<cluster> files but the definition is reversed.  The 
+format is:
+
+S<< <host> <tag> [...] >>
+
+This allows one host to be specified as a member of a number of tags.  This
+format can be clearer than using F<clusters> files.
+
+Extra tag files may be spcieid either an an option (see C<tag-file>) or within
+the users F<$HOME/.clusterssh/config> file (see C<extra_tag_file> 
+configuration option).
+
+NOTE: All tags are added together
 
 =item F</etc/csshrc> & F<$HOME/.clusterssh/config>
 
